Add API and update copy

--- a/storefront/pages/about.mdx
+++ b/storefront/pages/about.mdx
@@ -2,7 +2,7 @@
 
 Lissajous.art NFT
 
-**First of its kind Ethereum-native generative geometric art experiment**
+**Ethereum-native generative geometric art experiment**
 
 ## How does it work?
 
