Switch to discord

--- a/storefront/pages/about.mdx
+++ b/storefront/pages/about.mdx
@@ -173,8 +173,8 @@ Yes, we are aware. All new technologies have their problems in the early stages
 of development. Ethereum is on the right way with ETH 2.0. Nevertheless, we will
 invest 10% of our earnings into renewable energy projects. If you have any
 suggestions, perhaps related to blockchain, let us know in the
-[chat](https://matrix.to/#/!SEGqAkImeHDZDviOHK:matrix.org?via=matrix.org)..
+[discord](https://discord.gg/YQWVKy2b).
 
 ## I have other questions
 
-[We have created a dedicated chat room on Matrix.](https://matrix.to/#/!SEGqAkImeHDZDviOHK:matrix.org?via=matrix.org)
+[We have created a dedicated Server on Discord.](https://discord.gg/YQWVKy2b)
