--- a/storefront/pages/about.mdx
+++ b/storefront/pages/about.mdx
@@ -173,8 +173,8 @@ Yes, we are aware. All new technologies have their problems in the early stages
 of development. Ethereum is on the right way with ETH 2.0. Nevertheless, we will
 invest 10% of our earnings into renewable energy projects. If you have any
 suggestions, perhaps related to blockchain, let us know in the
-[discord](https://discord.gg/YQWVKy2b).
+[twitter](https://twitter.com/lissajous_art).
 
 ## I have other questions
 
-[We have created a dedicated Server on Discord.](https://discord.gg/YQWVKy2b)
+[Reach out on Twitter!](https://twitter.com/lissajous_art)
